*********************************************************************************************
*                                  CHANGE LOG 1.0.0 - > 1.x.x                               *
*********************************************************************************************
 * (11/06/2010)
  	 # 171
  	 	 CHANGED : Added a separators for menu items. Since JUIGLE 1.0.1 allows insertions of menu separators. In JUIGLE 1.0 was this bugged.
 
 * (11/05/2010)
  	 # 170
  	 	 REMOVED : Package called noname.
  	 	 REMOVED : Source code of JFreeChart library.
		 CHANGED : On a new version of the JUIGLE library -> JUIGLE-1.0.1
 
 * (10/14/2010)
  	 # 169
		 ADDED   : Added target for generating Javadoc by ANT build.xml
		
 * (10/05/2010)
  	 # 165
  	 	 ADDED   : New version of library JUIGLE -> JUIGLE-1.0.1-SNAPSHOT
	  
 * (10/03/2010)
  	 # 163
  	 	 FIXED   : build.xml -> not all of the main files and directories was copied to the dist directory
	
 * (5/22/2010)
	 # 142
		 FIXED   : Bug with load VHDR files under operating system UNIX (vsouhrada)