@@ -20,7 +20,8 @@ jerpa.extension.files = jerpa, xml, edf, vhdr, arff, pdf
 jerpa.perspective.path.package = ch.ethz.origo.jerpa.prezentation.perspective
 jerpa.perspective.list = SignalPerspective,\
 	AlgorithmPerspective,\
-	JERPAPerspective
+	JERPAPerspective,\
+	DBPerspective
 	
 jerpa.perspective.default = SignalPerspective
 
