@@ -2,6 +2,11 @@
 *                                  CHANGE LOG 1.0.0 - > 1.x.x                               *
 *********************************************************************************************
  * (11/06/2010)
+  	 # 172
+  	 	 ADDED   : Perspective called Database Manager. Only for testing now. Not completed yet.
+  	 	 CHANGED : Updated the LoginDialog.
+  	 	 
+ * (11/06/2010)
   	 # 171
   	 	 CHANGED : Added a separators for menu items. Since JUIGLE 1.0.1 allows insertions of menu separators. In JUIGLE 1.0 was this bugged.
  
